# mini-execution-engine

./: Cargo.toml  README.md
example/: simple_token.rs
src/: contract.rs  engine.rs  errors.rs  events.rs  ledger.rs  libs.rs  state.rs
tests/: engine_tests.rs
