[package]
name = "mini_execution_engine"
version = "0.1.0"
edition = "2021"
authors = ["Brennen Segura"]
license = "MIT"
description = "A minimal Rust execution engine for custom smart‑contract primitives. Deterministic state, events, and mock ledger."
repository = "https://github.com/YOUR_USERNAME/mini-execution-engine"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"
